MySQL Bug #68732, Bug #17191646 - QUERY TIMEOUT CANNOT BE ADJUSTED IN MYSQL FOR EXCEL
- Added the GlobalConnectionCommandTimeout and GlobalConnectionConnectionTimeout settings so users can override the connection timeout default values that the MySqlConnectionString object provides. (app.config, source/Properties/Settings.Designer.cs, source/Properties/Settings.settings)
- Created the GlobalOptionsDialog form to maintain the new timeout settings. (source/Forms/GlobalOptionsDialog.cs, source/Forms/GlobalOptionsDialog.Designer.cs, source/Forms/GlobalOptionsDialog.resx, source/MySQL.ForExcel.csproj)
- Added code and buttons to open the GlobalOptionsDialog from the schema and db object selection panels. (source/Panels/DBObjectSelectionPanel.cs, source/Panels/DBObjectSelectionPanel.Designer.cs, source/Panels/DBObjectSelectionPanel.resx, source/Panels/SchemaSelectionPanel.cs, source/Panels/DBObjectSelectionPanel.Designer.cs, source/Panels/DBObjectSelectionPanel.resx)
- Created the RefreshWbConnectionTimeouts method that is called after the user changes the timeout values stored in the settings file. This method is also called every time a new connection is opened to override the C/Net defaults. (source/Controls/ExcelAddInPane.cs)
- Fixed a cosmetic problem in the WelcomePanel where the panel above the connections tree was being displayed with a different color than the rest of the parent panel. (source/Panels/WelcomePanel.Designer.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.1.2
+- Added global options dialog that can be accessed from the Schema Selection and DB Object Selection panels where the timeouts for the connection to the DB
+  Server and for the query commands can be changed from their default values (15 seconds for the connection timeout and 30 seconds for the query timeout).
+  (MySQL Bug #68732, Bug #17191646 - QUERY TIMEOUT CANNOT BE ADJUSTED IN MYSQL FOR EXCEL)
 - Changed the Varchar(65,535) data type shown in the Export Data data type combo box to Text since the maximum row size is 65,535 bytes and any autodetected
   column data type with a length greater than 4,000 should be set to Text actually for the table to be created successfully.
   (MySQL Bug #69779, Bug #17191633 - EXPORT FAILS FOR EXCEL FILES CONTAINING > 4000 CHARACTERS OF TEXT PER CELL)
