Bug #16239007 - CONNECTIONS TO MYSQL SERVICES NOT RUNNING DISPLAY A WRONG PASSWORD ERROR MESSAGE
- Fixed the code in the OpenConnection method to test a connection as it is stored (may already have a stored password), if the connection fails because the password was not present or because the password is wrong then offer the users a dialog to enter a different password and retry the connection until an error different to the wrong password one is thrown or until the user cancels. (source/Controls/ExcelAddInPane.cs)
- Added the IsSSL and TestConnectionAndShowError extension methods for the MySqlWorkbenchConnection class to check if the connection is using SSL and to test the connection but additionally show formatted error messages to the users stating the actual reason of the failing connection. (source/Classes/Utilities.cs)
- Enhanced the PasswordDialog form to offer the option to store the password (so users do not have to type it every time) and to optionally retry the connection right after the user enters a new password. (source/Forms/PasswordDialog.cs, source/Forms/PasswordDialog.designer.cs, source/Forms/PasswordDialog.resx)
- Changed all the calls where extension methods were not being used to use them. (source/Classes/MySQLDataTable.cs, source/Classes/Utilities.cs, source/Forms/AppendDataForm.cs, source/Forms/ImportProcedureForm.cs, source/Forms/ImportTableViewForm.cs, source/Panels/DBObjectSelectionPanel.cs, source/Panels/SchemaSelectionPanel.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.1.2
+- Added code to properly check the reason for a failing connection, if it's a failing password the user gets a dialog to retry the connection with a different
+  password until the connection succeeds, a connection error not related to the password is thrown or the user cancels. If the failing connection is not related
+  to a bad password an error message is shown to the users indicating the reason of the failure.
+  (Bug #16239007 - CONNECTIONS TO MYSQL SERVICES NOT RUNNING DISPLAY A WRONG PASSWORD ERROR MESSAGE)
 - Added global options dialog that can be accessed from the Schema Selection and DB Object Selection panels where the timeouts for the connection to the DB
   Server and for the query commands can be changed from their default values (15 seconds for the connection timeout and 30 seconds for the query timeout).
   (MySQL Bug #68732, Bug #17191646 - QUERY TIMEOUT CANNOT BE ADJUSTED IN MYSQL FOR EXCEL)
