Bug #17354102 - ERROR IMPORTING TEXT VALUES TO EXCEL STARTING WITH AN EQUALS SIGN
- Added code to the ImportDataTableToExcelAtGivenCell method to escape text values that start with an equals sign by prepending an apostrophe to them, this in order for Excel to avoid treating those values as formulas. (source/Controls/ExcelAddInPane.cs)
- Added the ImportAdvancedOptionsDialog for the Import Data from Table and Import Data from Procedure operations to control the number of preview records and the option to escape text values starting with an equals sign. Added the ImportEscapeFormulaTextValues and ImportPreviewRowsQuantity properties maintained by the aforementioned dialog. (source/Forms/ImportAdvancedOptionsDialog.cs, source/Forms/ImportAdvancedOptionsDialog.Designer.cs, source/Forms/ImportAdvancedOptionsDialog.resx, source/MySQL.ForExcel.csproj, source/Properties/Settings.Designer.cs, source/Properties/Settings.settings, source/app.config)
- Changed the code for some dialogs to execute upon form closing rathern than upon the accept button click for consistency. (source/Forms/AppendAdvancedOptionsDialog.cs, source/Forms/AppendAdvancedOptionsDialog.Designer.cs, source/Forms/AppendAdvancedOptionsDialog.resx, source/Forms/ExportAdvancedOptionsDialog.cs, source/Forms/ExportAdvancedOptionsDialog.Designer.cs, source/Forms/ExportAdvancedOptionsDialog.resx, source/Forms/GlobalOptionsDialog.cs, source/Forms/GlobalOptionsDialog.Designer.cs, source/Forms/GlobalOptionsDialog.resx)
- Renamed 2 methods to be consistent with the way the tables involved in an Append operation are named (Source Table and Target Table). (source/Forms/AppendDataForm.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.1.2
+- Added code to escape text values to be imported to an Excel worksheet that start with an equals sign so Excel does not treat those values as formulas that will
+  fail evaluation. This is an option turned on by default that can be turned off by users if they wish to import values to be treated as Excel formulas.
+  (Bug #17354102 - ERROR IMPORTING TEXT VALUES TO EXCEL STARTING WITH AN EQUALS SIGN)
 - Added code to properly check the reason for a failing connection, if it's a failing password the user gets a dialog to retry the connection with a different
   password until the connection succeeds, a connection error not related to the password is thrown or the user cancels. If the failing connection is not related
   to a bad password an error message is shown to the users indicating the reason of the failure.
