Bug #17354118 - DON'T HANDLE EXPIRED PASSWORDS
- Created the TestConnectionResult to have more information about a connection test rather than just getting a success/fail boolean value. Replaced the TestConnectionAndShowError method with the TestConnectionAndReturnResult one where the error is analyzed for a failed connection and friendly errors are displayed to the users, also a TestConnectionResult is returned with information about the failure, if the failure reason is an expired password, a dialog is presented to the user to reset it. Added the TestConnectionAndRetryOnWrongPassword which is meant to be used throughout the application to test a connection. (source/Classes/Utilities.cs)
- Moved code from the OpenConnection method to the TestConnectionAndRetryOnWrongPassword one. (source/Controls/ExcelAddInPane.cs)
- Modified the PasswordDialog to use it to reset a password besides providing a connection password. (source/Forms/PasswordDialog.cs, source/Forms/PasswordDialog.designer.cs, source/Forms/PasswordDialog.resx)
- Added code to test the current connection before attempting to start any operation on the database like a creation of a new schema, exporting, appending, importing or editing data. (source/Panels/DBObjectSelectionPanel.cs, source/Panels/SchemaSelectionPanel.cs)
- Added resource strings for friendly error messages related to connection test or password resetting. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)
- Updated the MySQL.Utility.dll with the latest one containing code to query the current user after opening the connection during a connection test to check if the user's password expired. (source/libraries/MySQL.Utility.dll)
- Fixed code in the ThisAddIn_Shutdown method that was failing to access the ExcelPanesList when closing Excel since its value is null if the MySQL for Excel toggle button is not checked. (source/ThisAddIn.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.1.2
+- Added a check on every connection test for an expired password, if the password has been expired a dialog is now shown to the user to reset the password. Also
+  added a connection test before any operation against the database (schema creation, data import, append, export or edition).
+  (Bug #17354118 - DON'T HANDLE EXPIRED PASSWORDS)
 - Added code to escape text values to be imported to an Excel worksheet that start with an equals sign so Excel does not treat those values as formulas that will
   fail evaluation. This is an option turned on by default that can be turned off by users if they wish to import values to be treated as Excel formulas.
   (Bug #17354102 - ERROR IMPORTING TEXT VALUES TO EXCEL STARTING WITH AN EQUALS SIGN)
