--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -732,4 +732,36 @@ To be able to make modifications on cells not related to MySQL data please exit 
   <data name="TaskPaneErrorCreatingWorksheetText" xml:space="preserve">
     <value>Error while creating new Excel Worksheet</value>
   </data>
+  <data name="OldPasswordLabelText" xml:space="preserve">
+    <value>Old Password:</value>
+  </data>
+  <data name="PasswordLabelText" xml:space="preserve">
+    <value>Password:</value>
+  </data>
+  <data name="ConnectionPasswordLabelText" xml:space="preserve">
+    <value>Please enter the password for the connection:</value>
+  </data>
+  <data name="ConnectionPasswordWindowTitleText" xml:space="preserve">
+    <value>Connection Password</value>
+  </data>
+  <data name="ExpiredPasswordLabelText" xml:space="preserve">
+    <value>The password for the MySQL account has expired.
+Please enter a new password:</value>
+  </data>
+  <data name="ExpiredPasswordWindowTitleText" xml:space="preserve">
+    <value>Password Expired</value>
+  </data>
+  <data name="PasswordsMismatchErrorText" xml:space="preserve">
+    <value>The new password and its confirmation do not match. Please enter them again and make sure they match.</value>
+  </data>
+  <data name="PasswordResetErrorDetailText" xml:space="preserve">
+    <value>An error ocurred trying to reset the password for the current user.
+Please select your MySQL connection again to retry.</value>
+  </data>
+  <data name="PasswordResetErrorTitleText" xml:space="preserve">
+    <value>Password Reset Error</value>
+  </data>
+  <data name="GenericConnectionErrorText" xml:space="preserve">
+    <value>MySQL Error {0}: {1}</value>
+  </data>
 </root>
