Work Item #446 - Import Data dumps dumps column names in spreadsheet without colors like Edit Data does
- Added code to the ImportDataTableToExcelAtGivenCell method to set the coloring of Excel cells containing column names from an Import Data operation to the same color used in Edit Data operations. (source/Controls/ExcelAddInPane.cs)
- Moved code to manipulate Excel objects (Excel.Range, Excel.Worksheet and RangeAndAddress objects) from the EditDataDialog and ExcelAddInPane classes to the ExcelUtilities class in order to reuse them in other places and updated their consumers. (source/Classes/ExcelUtilities.cs, source/Classes/MySQLDataTable.cs, source/Classes/RangeAndAddress.cs, source/Controls/ExcelAddInPane.cs, source/Forms/EditDataDialog.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 1.1.2
+- Set the color of the Excel cells containing column names from an Import Data operation to the same color used in Edit Data operations for consistency.
 - Added a check on every connection test for an expired password, if the password has been expired a dialog is now shown to the user to reset the password. Also
   added a connection test before any operation against the database (schema creation, data import, append, export or edition).
   (Bug #17354118 - DON'T HANDLE EXPIRED PASSWORDS)
