Work Item #632 - Generate worksheet protection password at runtime
- Replaced the SHEET_PROTECTION_KEY constant with the WorksheetProtectionKey property which is initialized with a GUID passkey in the constructor, and updated the consumers of the passkey. (source/Forms/EditDataDialog.cs)
- Added the ExcelApplication_WorkbookBeforeSave event method to check if there are open Edit Data sessions in any of the Worksheets before their parent Workbook is saved, if so the users will be asked if they wish to close the Editing Sessions before saving (so the Worksheets are saved unprotected), otherwise the Worksheets will be saved protected and the users will be able to unprotect them later retrieving the passkeys from the application log after closing MySQL for Excel. The reason not to share the passkeys before MySQL for Excel is closed is because the Worksheets in Edit Mode must not be unprotected since that messes up the columns and rows order needed by the Edit Data logic. (source/Controls/ExcelAddInPane.cs, source/Controls/ExcelAddInPane.Designer.cs)
- Added resource strings for the question shown to the users before saving a Workbook with Worksheets in Edit Mode, and for the log messages containing the passkeys. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.1.2
+- Generate a password dynamically to protect Excel Worksheets during Edit Data operations instead of using a hardcoded GUID. If the user saves the Workbook while
+  any of its Worksheets is in Edit mode, MySQL for Excel will ask the user if he wants to exit the Edit Mode before saving. If the user chooses not to close Edit
+  Mode the passkeys used to protect those Worksheets will be output to the application log after closing MySQL for Excel.
 - Set the color of the Excel cells containing column names from an Import Data operation to the same color used in Edit Data operations for consistency.
 - Added a check on every connection test for an expired password, if the password has been expired a dialog is now shown to the user to reset the password. Also
   added a connection test before any operation against the database (schema creation, data import, append, export or edition).
