--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+1.2.0
+- Added support for edition of MySQL Workbench connections right from the Welcome Panel where connections are shown. Any of the listed MySQL Workbench connections
+  can be right-clicked and a new "Edit Connection" context menu is available for users to edit the Workbench connection properties.  This feature shines brighter
+  when MySQL Workbench is not installed since users only relied on MySQL Workbench to edit a connection, without Workbench users had to delete a connection and
+  create it again with updated values.
+
 1.1.2
 - Generate a password dynamically to protect Excel Worksheets during Edit Data operations instead of using a hardcoded GUID. If the user saves the Workbook while
   any of its Worksheets is in Edit mode, MySQL for Excel will ask the user if he wants to exit the Edit Mode before saving. If the user chooses not to close Edit
