--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -780,4 +780,7 @@ Do you want to exit Edit Mode on all Worksheets within the Workbook before savin
   <data name="WorkSheetInEditModeSavingWarningTitle" xml:space="preserve">
     <value>Workbook contains password protected Worksheets.</value>
   </data>
+  <data name="edit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\edit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
