Work Item #732 - Add support for optimistic updates on Edit Data operations via a configurable option
- Extracted the logic of the GetSql method into 3 new methods GetSqlForAddedRow, GetSqlForDeletedRow and GetSqlForModifiedRow and added the useOptimisticUpdate parameter to the GetSql and GetSqlForModifiedRow to assemble a different UPDATE statement when using optimistic updates that references all columns in the where clause, so if changes were done to the data the update will not proceed and a warning shown to the users. (source/Classes/MySqlDataTable.cs)
- Added a new setting for the Use Optimistic Update option applied globally for all editing sessions. (source/Properties/Settings.Designer.cs, source/Properties/Settings.settings)
- Added context menu items for the Use Optimistic Update setting so it can be applied for the current session run in that EditDataDialog or applied globally for all sessions (which affects the persisted setting).  Added logic that sets the context menus checked status accordingly and/or saves the setting in the settings.config file). source/Forms/EditDataDialog.cs, source/Forms/EditDataDialog.Designer.cs)
- Added images for the EditDataDialog's context menu Exit Edit Mode and Use Optimistic Updates items. (source/MySQL.ForExcel.csproj, source/Properties/Resources.Designer.cs, source/Properties/Resources.resx, source/Resources/exit.png, source/Resources/optimistic_update.png)
- Created the IsMySqlZeroDateValue extension method to encapsulate that logic that was being called from several places. (source/Classes/DataTypeUtilities.cs, source/Classes/MySqlDataTable.cs)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -783,4 +783,13 @@ Do you want to exit Edit Mode on all Worksheets within the Workbook before savin
   <data name="edit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\edit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\exit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="optimistic_update" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\optimistic_update.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="UnhandledMySqlTypeEncounteredError" xml:space="preserve">
+    <value>Unhandled MySQL type encountered.</value>
+  </data>
 </root>
