--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.2.0
+- Added support for optimistic updates to Edit Data operations via a configurable option, using optimistic updates will ensure that pushing changes in the current
+  editing session does not overwrite changes done by another person to the set of data retrieved initially. This option can be set globally for all editing sessions
+  open by the current user which is persisted in the settings file, or for a specific editing session so when the session is over the optimistic update value is
+  reset to the global one.
 - Added support for edition of MySQL Workbench connections right from the Welcome Panel where connections are shown. Any of the listed MySQL Workbench connections
   can be right-clicked and a new "Edit Connection" context menu is available for users to edit the Workbench connection properties.  This feature shines brighter
   when MySQL Workbench is not installed since users only relied on MySQL Workbench to edit a connection, without Workbench users had to delete a connection and
