Tracker WorkItem 444 (3/3) - In Export Data: DetectTypes method needs to be updated to be able to work with the already loaded data. Data must be reloaded if the user changes the "Use formatted values" column.
- Added properties ParentFormRequiresRefresh, ExportDetectDatatypeChanged, and ExportRemoveEmptyColumnsChanged to get better granularity and trace-ability of the changes the user makes to the settings at ExportAdvancedOptionsDialog, and reflect those at its parent form.
- Refactor of ExportAdvancedOptionsDialog_FormClosing to correctly set the previous mentioned properties.
- Promote of local method variables proposedTableName and exportingWorksheetName to class private fields in order to simplify some method signatures and get a better use of their values at ExportDataForm.cs.
- Several modifications to AdvancedOptionsButton_Click in order to refresh the grid according to settings changes at ExportDataForm.cs.

--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@
   can be right-clicked and a new "Edit Connection" context menu is available for users to edit the Workbench connection properties.  This feature shines brighter
   when MySQL Workbench is not installed since users only relied on MySQL Workbench to edit a connection, without Workbench users had to delete a connection and
   create it again with updated values.
+- Changes done to the Advanced Options dialogues for Import, Export and Append Data forms are immediately reflected without requiring to close and reopen those forms again.
 
 1.1.2
 - Generate a password dynamically to protect Excel Worksheets during Edit Data operations instead of using a hardcoded GUID. If the user saves the Workbook while
